--- a/index.html
+++ b/index.html
@@ -18,11 +18,14 @@
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
+    <div id="plot"></div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
           <h5>Test Subject ID No.:</h5>
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" >
+            <option value="options">options</option>
+          </select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -47,8 +50,8 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="static/js/app.js"></script>
-  <script src="static/js/bonus.js"></script>
+  <script src="./static/js/app.js"></script>
+  <!-- <script src="./static/js/bonus.js"></script> -->
   
 </body>
 
