--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       </div>
     </div>
     <div id="plot"></div>
+    <div id="plot1"></div>
+    <div id="plot2"></div>
     <div class="row">
       <div class="col-md-2">
         <div class="well">
